update LR.org URLs to https

--- a/LR/lr/public/index.html
+++ b/LR/lr/public/index.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html 
+<!DOCTYPE html
      PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -68,7 +68,7 @@
     <body>
         <div id="container">
 
-            <h1><a href="http://www.learningregistry.org/"><img src="LRlogo.png" alt="Learning Registery" style="width: 480px; border: none"/></a>
+            <h1><a href="https://www.learningregistry.org/"><img src="LRlogo.png" alt="Learning Registery" style="width: 480px; border: none"/></a>
             </h1>
             <hr/>
                 <p>Welcome to this Learning Registry (LR) node. If you have questions, please
@@ -77,13 +77,13 @@
 		<p>
                 <ul>
                     <li>
-                        <a href="http://www.learningregistry.org/">LearningRegistry.org Home Page</a>
+                        <a href="https://www.learningregistry.org/">LearningRegistry.org Home Page</a>
                     </li>
                     <li>
                         <a href="/apps/EasyPublish/">Easy Publish</a>
                     </li>
                     <li>
-                        <a href="http://www.github.com/LearningRegistry/LearningRegistry/wiki">LR Wiki</a> 
+                        <a href="http://www.github.com/LearningRegistry/LearningRegistry/wiki">LR Wiki</a>
                     </li>
                     <li>
                         <a href="http://docs.learningregistry.org/">LR Technical Documentation</a>
